fix: add more gap between user name and email

--- a/src/components/topBox/topBox.scss
+++ b/src/components/topBox/topBox.scss
@@ -14,7 +14,7 @@
 
       .user {
         display: flex;
-        gap: 10px;
+        gap: 15px;
         align-items: center;
 
         img {
